--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome aboard KLM PTFS</title>
+  <title>KLM|PTFS</title>
   <style>
     body {
+      margin: 0;
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
       text-align: center;
-      padding: 50px;
     }
+
+    /* Navigation bar styles */
+    .navbar {
+      background-color: #005bac;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+    }
+
+    .navbar a {
+      color: white;
+      padding: 14px 20px;
+      text-decoration: none;
+      display: block;
+    }
+
+    .navbar a:hover {
+      background-color: #003f87;
+    }
+
+    .content {
+      padding: 60px;
+    }
+
     h1 {
       color: #005bac;
     }
+
     .tagline {
       font-size: 18px;
       color: #333;
@@ -19,9 +44,20 @@
   </style>
 </head>
 <body>
-  <h1>Welcome aboard <span style="color:#005bac;">KLM</span> PTFS</h1>
-  <p class="tagline">Join a community of virtual aviation fans in Pilot Training Flight Simulator.</p>
-  <p>🛫 Booking System and Discord integration coming soon.</p>
+
+  <!-- 🔹 Navigation Bar -->
+  <div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="flights.html">Flights</a>
+    <a href="booking.html">Booking</a>
+  </div>
+
+  <!-- 🔹 Main Page Content -->
+  <div class="content">
+    <h1>Welcome aboard <span style="color:#005bac;">KLM</span> PTFS</h1>
+    <p class="tagline">Join a community of virtual aviation fans in Pilot Training Flight Simulator.</p>
+    <p>🛫 Booking System and Discord integration coming soon.</p>
+  </div>
+
 </body>
 </html>
-
