Update index.html - KLM Logo

--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
 <body>
 
   <!-- 🔹 Navigation Bar -->
-  <div class="navbar">
-    <a href="index.html">Home</a>
-    <a href="flights.html">Flights</a>
-    <a href="booking.html">Booking</a>
-  </div>
-
+<div class="navbar">
+  <a href="index.html">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/KLM_logo_2011.svg" alt="KLM" style="height: 24px; vertical-align: middle; margin-right: 10px;">
+  </a>
+  <a href="index.html">Home</a>
+  <a href="flights.html">Flights</a>
+  <a href="booking.html">Booking</a>
+</div>
   <!-- 🔹 Content -->
   <div class="content">
     <h1>Welcome aboard <span style="color:#add8ff;">KLM</span> PTFS</h1>
