--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>KLMRoyalDutchAirlines</title>
 </head>
 <body>
-  
 </body>
 </html>
 <h1>Welcome Aboard KLM PTFS</h1>
 <h2>Join KLM PTFS Today by clicking the button below</h2>
 <p>Used for random info later</p>
-<button>Join our discord</button>
-<a href="https://discord.gg/4jM3wqHQUu">link text</a>
+  <button onclick="document.location ='https://discord.gg/4CeQSGGaVs'">Join our discord</button>
+
+
